--- a/logicaltheory.tex
+++ b/logicaltheory.tex
@@ -83,7 +83,7 @@ explanation is as follows:
 
 \begin{quote}
   To know the judgement $\hyp{\mathcal{J}}{\mathcal{J}'}$ is to know
-  the categorical judgement $\mathcal{J}$ assuming you know the
+  the judgement $\mathcal{J}$ assuming you know the
   judgement $\mathcal{J}'$.
 \end{quote}
 
