--- a/ctt.tex
+++ b/ctt.tex
@@ -153,7 +153,7 @@ We will say that $\sequent{\Gamma}{\mathcal{J}}$ is only a judgement under the
 presuppositions that $\isctx\Gamma$\ and that $\mathcal{J}$ is a categorical
 judgement of the form $\isset{A}$, $\eisset{A}{B}$, $\ver{M}{A}$, or
 $\ever{M}{N}{A}$. Because of this presupposition, we are justified in
-propoounding the meaning of the judgement by structural induction on the
+propounding the meaning of the judgement by structural induction on the
 evidence for $\isctx\Gamma$, separately for each $\mathcal{J}$.
 
 Now we may begin giving the meaning explanations for
