--- a/prooftheory.tex
+++ b/prooftheory.tex
@@ -8,7 +8,7 @@
 
 \section{Proof-theoretic type theory}
 
-\subsection{Analytic and synthetic Judgement}
+\subsection{Analytic and synthetic judgement}
 
 A synthetic judgement is one for which the experience of \emph{coming
 to know it} necessarily entails some knowledge which is not implicit
@@ -162,7 +162,7 @@ $\genj{x}{\mathcal{J}}$ have the same meaning in the logical framework as
 before. In addition to these forms of judgement, we will need contexts (with
 their wellformedness judgement $\isctx{\Gamma}$) and an intensional sequent
 judgement \framebox{$\lfsequent{\Gamma}{\mathcal{J}}$}; their meanings here
-will similar to their meanings in the computational type theory, modulo the
+will be similar to their meanings in the computational type theory, modulo the
 fact that the intensional sequent judgement is defined over the categorical
 judgements of the logical framework ($\type\alpha$, $\etype{\alpha}{\beta}$,
 $\ofty{M}{\alpha}$ and $\eofty{M}{N}{\alpha}$), and that we have no notion of
